tests/ui/g-reserved-control-label-plain-message.stderr
error[E0080]: evaluation panicked: control labels require capability payloads
 --> src/global.rs
  |
  |         crate::global::validate_sendable_message::<M>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::Message<hibana::global::LabelMarker<110>, u32>, 0>::{constant#0}` failed inside this call
  |
note: inside `hibana::global::validate_sendable_message::<hibana::global::Message<hibana::global::LabelMarker<110>, u32>>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("control labels require capability payloads");
  |         ---------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_sendable_message::<M>();
  | |         if <M as MessageControlSpec>::IS_CONTROL {
  | |             let is_self_send = <<From as steps::RoleEq<To>>::Output as steps::Bool>::VALUE;
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<110>, u32>, 0>`
 --> tests/ui/g-reserved-control-label-plain-message.rs:4:13
  |
4 |     let _ = g::send::<g::Role<0>, g::Role<1>, g::Msg<110, u32>, 0>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation panicked: control labels require capability payloads
 --> src/global/program.rs
  |
  |         crate::global::const_dsl::const_send_typed::<From, To, Msg, LANE>(),
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::Message<hibana::global::LabelMarker<110>, u32>>, hibana::global::steps::StepNil> as hibana::global::program::BuildProgramSource>::SOURCE` failed inside this call
  |
note: inside `hibana::global::const_dsl::const_send_typed::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<110>, u32>, 0>`
 --> src/global/const_dsl.rs
  |
  |     crate::global::validate_sendable_message::<M>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_sendable_message::<hibana::global::Message<hibana::global::LabelMarker<110>, u32>>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("control labels require capability payloads");
  |         ---------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |         let _ = <Steps as BuildProgramSource>::SOURCE.scope_budget();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn Program::<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<110>, u32>>, hibana::global::steps::StepNil>>::build`
 --> src/global.rs
  |
  |     Program::build()
  |     ^^^^^^^^^^^^^^^^
